<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">gratic</string>

    <string name="check_internet_connection">Couldn\'t reach server. Check your internet connection.</string>

    <string name="choose_a_username">Choose a username</string>
    <string name="choose_your_word">You are next, choose your word!</string>

    <string name="close">Close</string>

    <string name="create_a_new_room">Create a New Room</string>
    <string name="create_room">Create Room</string>

    <string name="default_room_size">4</string>

    <string name="dialog_leave_message">This will disconnect you from the game.</string>
    <string name="dialog_leave_no">no</string>
    <string name="dialog_leave_title">Do you really want to close the app?</string>
    <string name="dialog_yes">yes</string>

    <string name="error_connection_failed">connection failed</string>
    <string name="error_field_empty">The fields may not be empty</string>
    <string name="error_http">Something went wrong. Please try again later.</string>
    <string name="error_internet_turned_off">This app requires an active internet connection to be used.</string>
    <string name="error_room_name_too_long">The room name must not exceed %d characters.</string>
    <string name="error_room_name_too_short">The room name must be at least %d characters long.</string>
    <string name="error_unknown">Unknown Error</string>
    <string name="error_username_too_long">The maximum username length is %d.</string>
    <string name="error_username_too_short">The minimum username length is %d characters.</string>

    <string name="next">Next</string>

    <string name="no_rooms_found">No Rooms Found</string>

    <string name="open">Open</string>

    <string name="or">or</string>

    <string name="player_is_drawing">%s is choosing a word…</string>

    <string name="room_name">Room name</string>
    <string name="room_size">Room Size</string>
    <string-array name="room_size_array">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string name="search_for_rooms">Search for rooms…</string>

    <string name="username">Username</string>

    <string name="waiting_for_players">Waiting for players…</string>
    <string name="waiting_for_start">Waiting for start…</string>
</resources>
