<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvCreateRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/create_a_new_room"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tilRoomName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRoomName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:hint="@string/room_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRoomName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:maxLength="16" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRoomSize"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/room_size"
        app:layout_constraintEnd_toStartOf="@+id/btnCreateRoom"
        app:layout_constraintStart_toStartOf="@+id/tilRoomName"
        app:layout_constraintTop_toBottomOf="@+id/tilRoomName">

        <AutoCompleteTextView
            android:id="@+id/tvMaxPersons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"
            android:labelFor="@id/tvMaxPersons"
            android:text="@string/default_room_size" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreateRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_room"
        app:layout_constraintBottom_toBottomOf="@+id/tilRoomSize"
        app:layout_constraintEnd_toEndOf="@+id/tilRoomName"
        app:layout_constraintTop_toTopOf="@+id/tilRoomSize" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/createRoomProgressBar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilRoomSize" />

</androidx.constraintlayout.widget.ConstraintLayout>