<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRoomName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/search_for_rooms"
        app:layout_constraintEnd_toStartOf="@+id/ibReload"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRoomName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/ibReload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/rvRooms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_refresh" />

    <TextView
        android:id="@+id/tvNoRoomsFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/no_rooms_found"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/rvRooms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rvRooms" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRooms"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/materialTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilRoomName"
        tools:listitem="@layout/item_room" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/roomsProgressBar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/rvRooms"
        app:layout_constraintEnd_toEndOf="@+id/rvRooms"
        app:layout_constraintStart_toStartOf="@+id/rvRooms"
        app:layout_constraintTop_toTopOf="@+id/rvRooms" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        app:layout_constraintBottom_toTopOf="@+id/btnCreateRoom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreateRoom"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_room"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeWidth="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>